--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 readme = "README.md"
 requires-python = ">=3.12.0"
 dependencies = [
+    "blinker>=1.9.0",
     "click>=8.1.8",
     "ibevent>=0.2.0",
     "pydantic>=2.10.6",
