--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 requires-python = ">=3.12.0"
 dependencies = [
     "click>=8.1.8",
+    "ib-async>=1.0.3",
+    "loguru>=0.7.3",
     "pydantic>=2.10.6",
     "pydantic-settings>=2.8.1",
     "supervisor>=4.2.5",
