--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-IBKR_HOST=127.0.0.1
-IBKR_PORT=7497
-IBKR_CLIENTID=1
-IBKR_TIMEOUT=4
-IBKR_READONLY=False
-IBKR_ACCOUNT=
-IBKR_RAISESYNCERRORS=False
-IBKR_PATHS="./example"
+IB_EVENT_DAEMON_HOST=127.0.0.1
+IB_EVENT_DAEMON_PORT=7497
+IB_EVENT_DAEMON_CLIENTID=1
+IB_EVENT_DAEMON_TIMEOUT=4
+IB_EVENT_DAEMON_READONLY=False
+IB_EVENT_DAEMON_ACCOUNT=
+IB_EVENT_DAEMON_RAISESYNCERRORS=False
+IB_EVENT_DAEMON_SETUP_PATHS="./example"
