build: update docker file and supvervisord.conf

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -171,39 +171,17 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 ; IBKR 事件守护进程配置
 [program:ibkr_event_daemon]
-; 启动命令：使用安装的 ibkr-daemon 命令，指定日志级别和日志文件路径
-command=ibkr-daemon start --log-level INFO --log-file %(ENV_HOME)s/logs/ibkr_event_daemon.log
-; 工作目录：使用用户主目录
-directory=%(ENV_HOME)s
-; 运行用户：使用当前环境的用户
-user=%(ENV_USER)s
-; 是否随 supervisord 启动：是
+command=ibkr_event_daemon start --log-level DEBUG
+directory=/app
 autostart=true
-; 程序退出后是否自动重启：是
 autorestart=true
-; 启动多少秒后没有异常退出，就当作已经正常启动了
 startsecs=10
-; 启动失败自动重试次数，默认是 3
 startretries=3
-; 发送 stop 信号后，等待多少秒后强制关闭进程
 stopwaitsecs=10
-; 是否将进程组（包括子进程）一起关闭
 stopasgroup=true
-; 是否将进程组（包括子进程）一起杀死
 killasgroup=true
-; 是否将标准错误重定向到标准输出
-redirect_stderr=true
-; 标准输出日志文件路径
-stdout_logfile=%(ENV_HOME)s/logs/ibkr_event_daemon_stdout.log
-; 标准输出日志文件大小，超出后将会进行日志轮转
-stdout_logfile_maxbytes=50MB
-; 标准输出日志文件备份数
-stdout_logfile_backups=10
-; 标准错误日志文件路径
-stderr_logfile=%(ENV_HOME)s/logs/ibkr_event_daemon_stderr.log
-; 标准错误日志文件大小，超出后将会进行日志轮转
-stderr_logfile_maxbytes=50MB
-; 标准错误日志文件备份数
-stderr_logfile_backups=10
-; 进程环境变量：设置 Python 输出无缓冲，确保日志实时写入
-environment=PYTHONUNBUFFERED="1"
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+environment=PYTHONUNBUFFERED=1
