feat: update supervisord config

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -171,7 +171,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 ; IBKR 事件守护进程配置
 [program:ibkr_event_daemon]
-command=ibkr_event_daemon start --log-level DEBUG
+command=ibkr-daemon start --log-level DEBUG
 directory=/app
 autostart=true
 autorestart=true
