--- a/.github/workflows/docker_release.yaml
+++ b/.github/workflows/docker_release.yaml
@@ -5,15 +5,14 @@ on:
     types: [published]
   workflow_dispatch:
 
+env:
+  DOCKERHUB_IMAGE_NAME: shawndengdocker/ibkr_event_daemon
+  GITHUB_IMAGE_NAME: ShawnDen-coder/ibkr_event_daemon
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
-      attestations: write
-      id-token: write
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
@@ -28,33 +27,42 @@ jobs:
           DOCKER_USERNAME: shawndengdocker
           DOCKER_TOKEN: op://shawndengdev/dockerhub/credential
 
-      - name: Print Docker Username
-        run: echo "Docker Username: ${{ env.DOCKER_USERNAME }}"
-
-      - name: Print Image Name
-        run: echo "Image Name: ${{ env.DOCKER_USERNAME }}/$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')"
-
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          images: ${{ env.DOCKER_USERNAME }}/$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ env.PERSONAL_ACCESS_TOKEN }}
 
-      - name: Build and push Docker image
-        id: push
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Validate build configuration
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: ./Dockerfile
+          call: check
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ steps.meta.outputs.tags }}
-            ${{ env.DOCKER_USERNAME }}/$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]'):latest
-          labels: ${{ steps.meta.outputs.labels }}
+            ${{env.DOCKERHUB_IMAGE_NAME}}:latest
+            ${{env.DOCKERHUB_IMAGE_NAME}}:${{ github.ref_name}}
 
+      - name: Push image to GHCR
+        run: |
+          docker buildx imagetools create \
+            --tag ${{ env.GITHUB_IMAGE_NAME }}:latest \
+            --tag ${{ env.GITHUB_IMAGE_NAME }}:${{ github.ref_name }} \
+            ${{ env.DOCKERHUB_IMAGE_NAME }}:${{ github.ref_name }}
