--- a/.github/workflows/docker_release.yaml
+++ b/.github/workflows/docker_release.yaml
@@ -7,11 +7,11 @@ on:
 
 env:
   DOCKERHUB_IMAGE_NAME: shawndengdocker/ibkr_event_daemon
-  GITHUB_IMAGE_NAME: ShawnDen-coder/ibkr_event_daemon
+  GITHUB_IMAGE_NAME: ghcr.io/shawnden-coder/ibkr_event_daemon
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Push Docker image to Docker Hub and GHCR
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -37,7 +37,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ env.PERSONAL_ACCESS_TOKEN }}
 
       - name: Set up QEMU
@@ -46,23 +46,24 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Validate build configuration
-        uses: docker/build-push-action@v6
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          call: check
+          images: |
+            ${{ env.DOCKERHUB_IMAGE_NAME }}
+            ${{ env.GITHUB_IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=ref,event=tag
+            type=ref,event=pr
+            type=sha,format=short
 
-      - name: Build and push
+      - name: Build and push Docker images
         uses: docker/build-push-action@v6
         with:
+          context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ${{env.DOCKERHUB_IMAGE_NAME}}:latest
-            ${{env.DOCKERHUB_IMAGE_NAME}}:${{ github.ref_name}}
-
-      - name: Push image to GHCR
-        run: |
-          docker buildx imagetools create \
-            --tag ${{ env.GITHUB_IMAGE_NAME }}:latest \
-            --tag ${{ env.GITHUB_IMAGE_NAME }}:${{ github.ref_name }} \
-            ${{ env.DOCKERHUB_IMAGE_NAME }}:${{ github.ref_name }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
