--- a/.github/workflows/docker_release.yaml
+++ b/.github/workflows/docker_release.yaml
@@ -17,28 +17,18 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
-      - name: Load secret
-        uses: 1password/load-secrets-action@v2
-        with:
-          export-env: true
-        env:
-          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-          PERSONAL_ACCESS_TOKEN: op://shawndengdev/github_access_token/credential
-          DOCKER_USERNAME: shawndengdocker
-          DOCKER_TOKEN: op://shawndengdev/dockerhub/credential
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ env.PERSONAL_ACCESS_TOKEN }}
+          password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -51,7 +41,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ env.DOCKERHUB_IMAGE_NAME }}
+            ${{ secrets.DOCKERHUB_IMAGE_NAME }}
             ${{ env.GITHUB_IMAGE_NAME }}
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
